Release v1.0.5
