# phonecom-cli/src/phonecom/createReplaceStructs.go
@@ -190,3 +190,69 @@ type ReplaceTrunkJson struct {
 	MaxConcurrentCalls int32  `json:"max_concurrent_calls"`
 	MaxMinutesPerMonth int32  `json:"max_minutes_per_month"`
 }
+
+type GetAccountJson struct {
+	AccountId int32 `json:"account_id"`
+}
+
+type GetApplicationJson struct {
+	ApplicationId int32 `json:"application_id"`
+}
+
+type GetCallLogJson struct {
+	CallLogId string `json:"call_log_id"`
+}
+
+type GetDeviceJson struct {
+	DeviceId int32 `json:"device_id"`
+}
+
+type GetExpressServiceCodeJson struct {
+	ExpressServiceCodeId int32 `json:"code_id"`
+}
+
+type GetExtensionJson struct {
+	ExtensionId int32 `json:"extension_id"`
+}
+
+type GetContactJson struct {
+	ExtensionId int32 `json:"extension_id"`
+	ContactId   int32 `json:"contact_id"`
+}
+
+type GetGroupJson struct {
+	ExtensionId int32 `json:"extension_id"`
+	GroupId     int32 `json:"group_id"`
+}
+
+type GetMediaJson struct {
+	MediaId int32 `json:"media_id"`
+}
+
+type GetMenuJson struct {
+	MenuId int32 `json:"menu_id"`
+}
+
+type GetPhoneNumberJson struct {
+	PhoneNumberId int32 `json:"number_id"`
+}
+
+type GetQueueJson struct {
+	QueueId int32 `json:"queue_id"`
+}
+
+type GetRouteJson struct {
+	RouteId int32 `json:"route_id"`
+}
+
+type GetScheduleJson struct {
+	ScheduleId int32 `json:"schedule_id"`
+}
+
+type GetSmsJson struct {
+	SmsId string `json:"sms_id"`
+}
+
+type GetTrunkJson struct {
+	TrunkId int32 `json:"trunk_id"`
+}
